# dna

./: .gitignore  CLAUDE.md  README.md  disclaimer.md  integration-output.txt  package-lock.json  package.json  test-output-history-fail.txt  test-output-history-pass.txt  test-output-memory-fail.txt  test-output-memory-pass.txt  test-output-reminders-fail.txt  test-output-reminders-pass.txt  test-output.txt
data/: config.example.json
docs/superpowers/plans/: 2026-03-26-dna-implementation.md  2026-03-26-web-dashboard.md  2026-04-02-desktop-companion.md  2026-04-03-native-rust-widget.md
docs/superpowers/specs/: 2026-03-26-dna-design.md  2026-04-02-desktop-companion-design.md  2026-04-03-native-rust-widget-design.md
src/: actions.ts  bot.ts  config.ts  engine.ts  files.ts  history.ts  index.ts  logger.ts  mcp-client.ts  memory.ts  reminders.ts  scheduler.ts  system-prompt.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/__tests__/: actions.test.ts  config.test.ts  engine.test.ts  file-write.test.ts  history.test.ts  integration.test.ts  memory.test.ts  reminders.test.ts  system-prompt.test.ts
src/web/: api-chat-config.ts  api-config.ts  api-events.ts  api-history.ts  api-memory.ts  api-reminders.ts  api-widget.ts  event-bus.ts  server.ts
src/web/public/: app.js  index.html  style.css
src/web/widget/: index.html  widget.css  widget.js
widget/: Cargo.toml
widget/src/: app.rs  chat.rs  config.rs  main.rs  sse.rs  theme.rs  tray.rs
