[package]
name = "dna-widget"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", default-features = true }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = { version = "0.25", features = ["png"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
auto-launch = "0.5"
open = "5"
tray-icon = "0.19"
muda = "0.15"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
